Add drugs, import them
