# public/swagger.json
@@ -441,9 +441,12 @@
 					"VIEW_USERS",
 					"UPDATE_USERS",
 					"ALL_PERMISSIONS",
+					"IMPORT_MEDECINES",
 					"INSTITUTION_ADMIN",
 					"VIEW_MEDECINES",
 					"UPDATE_MEDECINES",
+					"PURCHASE_MEDECINES",
+					"SERVE_MEDECINES",
 					"VIEW_PATIENTS",
 					"UPDATE_PATIENTS"
 				]
@@ -679,6 +682,146 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"IDrugDTO": {
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"drug_code": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"designation": {
+						"type": "string"
+					},
+					"instruction": {
+						"type": "string",
+						"nullable": true
+					},
+					"sellingUnit": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					},
+					"isOnMarket": {
+						"type": "boolean"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"institution": {
+						"$ref": "#/components/schemas/IInstitution"
+					}
+				},
+				"required": [
+					"id",
+					"drug_code",
+					"description",
+					"designation",
+					"instruction",
+					"sellingUnit",
+					"price",
+					"isOnMarket",
+					"createdAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IDrugResponse": {
+				"properties": {
+					"isOnMarket": {
+						"type": "string"
+					},
+					"sellingUnit": {
+						"type": "string"
+					},
+					"rows": {
+						"items": {
+							"$ref": "#/components/schemas/IDrugDTO"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"isOnMarket",
+					"sellingUnit",
+					"rows"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IPaged_IDrugResponse_": {
+				"properties": {
+					"data": {
+						"$ref": "#/components/schemas/IDrugResponse"
+					},
+					"totalItems": {
+						"type": "number",
+						"format": "double"
+					},
+					"currentPage": {
+						"type": "number",
+						"format": "double"
+					},
+					"itemsPerPage": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"data",
+					"totalItems",
+					"currentPage",
+					"itemsPerPage"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Pick_IDrug.Exclude_keyofIDrug.id-or-createdAt-or-isOnMarket__": {
+				"properties": {
+					"drug_code": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"designation": {
+						"type": "string"
+					},
+					"instruction": {
+						"type": "string"
+					},
+					"sellingUnit": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"drug_code",
+					"description",
+					"designation",
+					"instruction",
+					"sellingUnit",
+					"price"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_IDrug.id-or-createdAt-or-isOnMarket_": {
+				"$ref": "#/components/schemas/Pick_IDrug.Exclude_keyofIDrug.id-or-createdAt-or-isOnMarket__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"IDrugRequest": {
+				"$ref": "#/components/schemas/Omit_IDrug.id-or-createdAt-or-isOnMarket_"
 			},
 			"IUser": {
 				"properties": {
@@ -1447,6 +1590,337 @@
 						}
 					}
 				]
+			}
+		},
+		"/api/institutions/pharmacies": {
+			"get": {
+				"operationId": "GetPharmacies",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IInstitutionDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Institutions"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/institutions/insurances": {
+			"get": {
+				"operationId": "GetInsurances",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IInstitutionDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Institutions"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/import/drugs": {
+			"post": {
+				"operationId": "UploadFile",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Import"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"file": {
+										"type": "string",
+										"format": "binary"
+									}
+								},
+								"required": [
+									"file"
+								]
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/drugs": {
+			"get": {
+				"operationId": "GetAll",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IPaged_IDrugResponse_"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "Create",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IDrugDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IDrugRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/drugs/categories": {
+			"get": {
+				"operationId": "Categories",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"type": "string"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": []
+			}
+		},
+		"/api/drugs/{id}": {
+			"get": {
+				"operationId": "GetOne",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IDrugDTO"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			},
+			"put": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/IDrugRequest"
+							}
+						}
+					}
+				}
+			},
+			"delete": {
+				"operationId": "Delete",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "number",
+									"format": "double"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/drugs/all": {
+			"get": {
+				"operationId": "All",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/IDrugDTO"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Users"
+				],
+				"security": [
+					{
+						"jwtAuth": []
+					}
+				],
+				"parameters": []
 			}
 		},
 		"/api/auth/register": {
